--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>HOMEWORK</title>
     <script src="js/script2.js"></script>
     <link rel="stylesheet" href="css/new.css">
 </head>
