Loop complete for n-classes search

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>HOMEWORK</title>
-    <script src="js/script2.js"></script>
+    <title>Document</title>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="css/new.css">
 </head>
 
 <body>
     <div class="block2">Block #1 class=block2<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem optio dicta ipsum adipisci odio quo quae natus quas porro voluptatum praesentium, quam placeat in, sequi obcaecati, labore velit quod soluta.
-
-
     </div>
+    <div class="box">class=box<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, est aperiam incidunt sint aspernatur optio consequuntur pariatur nostrum facilis rem esse quisquam minima quibusdam harum velit. Amet eligendi porro magni ipsum possimus cumque eos quaerat, consequatur quis sed perspiciatis. Eum ad blanditiis illum rerum quo ipsa molestias dicta natus explicabo?</div>
+    
     <div class="block2">Block #2 class=block2<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam consequuntur reiciendis nulla molestias natus dignissimos, consequatur corporis saepe quos eaque, ad amet vel delectus facilis libero vero voluptates! Sunt, magnam officiis culpa sapiente dolorum dolore, molestias reprehenderit vitae! Voluptas, eaque.</div>
     <div id="demo">Block #3 id=demo<br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptatem at quasi temporibus expedita, aut voluptas illum fuga ratione nesciunt magni quaerat dolor tenetur dicta, nam, quae, sapiente eos commodi. Possimus itaque magnam aperiam at tenetur. Ullam repellat distinctio praesentium suscipit, optio unde necessitatibus, ratione voluptatum inventore et consequatur aperiam.</p>
