--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/new.css">
 </head>
 
