--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="js/main.js"></script>
+    <script src="js/done.js"></script>
     <link rel="stylesheet" href="css/new.css">
 </head>
 
@@ -17,17 +17,24 @@
     <div id="demo">Block #3 id=demo<br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptatem at quasi temporibus expedita, aut voluptas illum fuga ratione nesciunt magni quaerat dolor tenetur dicta, nam, quae, sapiente eos commodi. Possimus itaque magnam aperiam at tenetur. Ullam repellat distinctio praesentium suscipit, optio unde necessitatibus, ratione voluptatum inventore et consequatur aperiam.</p>
     </div>
-    <div id="demo">Block #4 id=demo<br>
+    <div id="bar">Block #4 id=bar<br>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia omnis natus sunt perferendis temporibus neque voluptatum aspernatur itaque sit cumque laborum, cum laboriosam recusandae ratione sint est deleniti, architecto, beatae repellat? Facere laboriosam dolor, atque enim rem, temporibus nisi nostrum?</p>
     </div>
     <div id="out">
         RESULT
 
     </div>
-    <div class="tutorial">
-        В КОНСОЛІ ВВЕДИ <br> findm('#назва');
+    <div class="tutorial">ВЕРСІЯ №1<br>
+        В КОНСОЛІ ВВЕДИ <br> $('#назва');
         <br> або
-        <br> findm('.назва');
+        <br> $('.назва');<br> ВЕРСІЯ №2<BR>
+        $('#example .example2 #demo');<br>
+        Працює для n-нної кількості елементів
+        <br>
+        Приклад<br>
+        $('#demo .block2');<br>
+        $('.box #demo .block2');
+        
     </div>
 </body>
 
