--- a/index.html
+++ b/index.html
@@ -1,41 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <script src="js/done.js"></script>
-    <link rel="stylesheet" href="css/new.css">
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="css/style.css">
+	
 </head>
-
 <body>
-    <div class="block2">Block #1 class=block2<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem optio dicta ipsum adipisci odio quo quae natus quas porro voluptatum praesentium, quam placeat in, sequi obcaecati, labore velit quod soluta.
-    </div>
-    <div class="box">class=box<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, est aperiam incidunt sint aspernatur optio consequuntur pariatur nostrum facilis rem esse quisquam minima quibusdam harum velit. Amet eligendi porro magni ipsum possimus cumque eos quaerat, consequatur quis sed perspiciatis. Eum ad blanditiis illum rerum quo ipsa molestias dicta natus explicabo?</div>
-    
-    <div class="block2">Block #2 class=block2<br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam consequuntur reiciendis nulla molestias natus dignissimos, consequatur corporis saepe quos eaque, ad amet vel delectus facilis libero vero voluptates! Sunt, magnam officiis culpa sapiente dolorum dolore, molestias reprehenderit vitae! Voluptas, eaque.</div>
-    <div id="demo">Block #3 id=demo<br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus voluptatem at quasi temporibus expedita, aut voluptas illum fuga ratione nesciunt magni quaerat dolor tenetur dicta, nam, quae, sapiente eos commodi. Possimus itaque magnam aperiam at tenetur. Ullam repellat distinctio praesentium suscipit, optio unde necessitatibus, ratione voluptatum inventore et consequatur aperiam.</p>
-    </div>
-    <div id="bar">Block #4 id=bar<br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia omnis natus sunt perferendis temporibus neque voluptatum aspernatur itaque sit cumque laborum, cum laboriosam recusandae ratione sint est deleniti, architecto, beatae repellat? Facere laboriosam dolor, atque enim rem, temporibus nisi nostrum?</p>
-    </div>
-    <div id="out">
-        RESULT
-
-    </div>
-    <div class="tutorial">ВЕРСІЯ №1<br>
-        В КОНСОЛІ ВВЕДИ <br> $('#назва');
-        <br> або
-        <br> $('.назва');<br> ВЕРСІЯ №2<BR>
-        $('#example .example2 #demo');<br>
-        Працює для n-нної кількості елементів
-        <br>
-        Приклад<br>
-        $('#demo .block2');<br>
-        $('.box #demo .block2');
-        
-    </div>
+<div class="info">
+   	<div id="nameb">
+	<p class="name-user">ВВЕДІТЬ ВАШЕ ІМ'Я</p>
+	<input type="text" class="name" id="name2" placeholder="введіть ваше ім'я" autofocus><button class="submit" id="next" onclick="compare()">OK</button>
+	</div>
+	 <div id="ageb">
+	 <p class="age-user">ВВЕДІТЬ ВАШ ВІК</p>
+	<input type="text" class="age" id="age2" placeholder="ваш вік" autofocus><button class="submit" id="next2" onclick="compare2()">ОK</button>
+	</div>
+	<div id="result">
+		ПОВІДОМЛЕННЯ<br>
+		<p id="text"></p>
+		<p id="text2"> </p>
+	</div>
+	</div>
+	<script src="js/main.js"></script>
 </body>
-
 </html>
