--- a/index-switch.html
+++ b/index-switch.html
@@ -3,14 +3,20 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Homework</title>
+	<title>Homework SWITCH</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
-
+<style>
+	body {
+		background-color:burlywood;
+	}	
+	
+	
+</style>
 </head>
 
 <body>
-<div class="title">Homework 1 (if)</div>
+<div class="title">Homework 2<br>(switch)</div>
 	<div id="sidebar">
 		<ul id="homework">
 			<li><a href="index.html">Homework 1<br>(if)</a></li>
@@ -32,9 +38,10 @@
 			ПОВІДОМЛЕННЯ<br>
 			<p id="text"></p>
 			<p id="text2"> </p>
+			
 		</div>
 	</div>
-	<script src="js/main.js"></script>
+	<script src="js/main-switch.js"></script>
 </body>
 
 </html>
