--- a/index-switch.html
+++ b/index-switch.html
@@ -6,6 +6,9 @@
 	<title>Homework SWITCH</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/nav.js"></script>
+	
 <style>
 	body {
 		background-color:burlywood;
@@ -19,8 +22,8 @@
 <div class="title">Homework 2<br>(switch)</div>
 	<div id="sidebar">
 		<ul id="homework">
-			<li><a href="index.html">Homework 1<br>(if)</a></li>
-			<li><a href="index-switch.html">Homework2<br>(switch)</a></li>
+			<li><a   href="index.html">Homework 1<br>(if)</a></li>
+			<li><a class="active" href="index-switch.html">Homework2<br>(switch)</a></li>
 			<li><a href="index-calc.html">Homework 3<br>(calc)</a></li>
 			<li><a href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
 		</ul>
