--- a/index-calc.html
+++ b/index-calc.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>MY-CALCULATOR</title>
-  
-    <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/style-calc.css">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+   <script src="js/nav.js"></script>
+    
 </head>
 
 <body>
@@ -14,8 +16,8 @@
 	<div id="sidebar">
 		<ul id="homework">
 			<li><a href="index.html">Homework 1<br>(if)</a></li>
-			<li><a href="index-switch.html">Homework2<br>(switch)</a></li>
-			<li><a href="#">Homework 3<br>(calc)</a></li>
+			<li><a  href="index-switch.html">Homework2<br>(switch)</a></li>
+			<li><a class="active" href="#">Homework 3<br>(calc)</a></li>
 			<li><a href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
 		</ul>
 	</div>
