--- a/index-indexOfAll.html
+++ b/index-indexOfAll.html
@@ -6,6 +6,9 @@
 	<title>Homework</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/nav.js"></script>
+
 <style>
 	body {
 		background-color:darkseagreen;
@@ -21,7 +24,7 @@
 			<li><a href="index.html">Homework 1<br>(if)</a></li>
 			<li><a href="index-switch.html">Homework2<br>(switch)</a></li>
 			<li><a href="index-calc.html">Homework 3<br>(calc)</a></li>
-			<li><a href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
+			<li><a class="active" href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
 		</ul>
 	</div>
 	
