--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Homework</title>
+		<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/nav.js"></script>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	
 
 </head>
 
@@ -13,7 +18,7 @@
 <div class="title">Homework 1 (if)</div>
 	<div id="sidebar">
 		<ul id="homework">
-			<li><a href="index.html">Homework 1<br>(if)</a></li>
+			<li><a  class="active" href="index.html">Homework 1<br>(if)</a></li>
 			<li><a href="index-switch.html">Homework2<br>(switch)</a></li>
 			<li><a href="index-calc.html">Homework 3<br>(calc)</a></li>
 			<li><a href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
