--- a/index-indexOfAll.html
+++ b/index-indexOfAll.html
@@ -25,6 +25,8 @@
 			<li><a href="index-switch.html">Homework2<br>(switch)</a></li>
 			<li><a href="index-calc.html">Homework 3<br>(calc)</a></li>
 			<li><a class="active" href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
+			<li><a href="cars.html">Homework 5<br> (AddNewCar)</a></li>	
+			<li><a  href="recursive.html">Homework 6<br>(IndexOfRec)<br> </a></li>
 		</ul>
 	</div>
 	
