--- a/index-calc.html
+++ b/index-calc.html
@@ -19,6 +19,8 @@
 			<li><a  href="index-switch.html">Homework2<br>(switch)</a></li>
 			<li><a class="active" href="#">Homework 3<br>(calc)</a></li>
 			<li><a href="index-indexOfAll.html">Homework 4<br>(indexOf All)</a></li>
+			<li><a href="cars.html">Homework 5<br> (AddNewCar)</a></li>	
+			<li><a  href="recursive.html">Homework 6<br>(IndexOfRec)<br> </a></li>
 		</ul>
 	</div>
     <div class="wrap">
